--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section id="main_content" class="inner">
         <h2 id="welcome-to-github-pages">欢迎来到Tody Orssarder Stewart的个人博客</h2>
 
-<p>由于博客主人正在<a href="https://hbhszx.cn/"></a>河北衡水中学</a>就读，暂无时间管理博客。高考后见！</p>
+<p>由于博客主人正在<a href="https://hbhszx.cn/"></a>河北衡水中学</a>学习，暂无时间管理博客。高考后见！</p>
 
 
 
